sharding/inserts_consistent.js failed on Nightly Linux 32-bit

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.5.1
    • Affects Version/s: None
    • Component/s: Testing Infrastructure
    • Environment:
      Nightly Linux 32-bit Build #1396
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Nightly Linux 32-bit Build #1396 July 11 (rev 8512fdda5f)

      http://buildbot.mongodb.org/builders/Nightly%20Linux%2032-bit/builds/1396/steps/test_11/logs/stdio
      http://buildlogs.mongodb.org/Nightly%20Linux%2032-bit/builds/1396/test/sharding/inserts_consistent.js

      ----
      Refreshing second mongos...
      ----
       m30999| Thu Jul 11 08:34:18.973 [conn1] loading chunk manager for collection inserts_consistent.coll using old chunk manager w/ version 1|0||51dea64a9f9da64575d9e961 and 1 chunks
       m30999| Thu Jul 11 08:34:18.973 [conn1] major version query from 1|0||51dea64a9f9da64575d9e961 and over 1 shards is { query: { ns: "inserts_consistent.coll", $or: [ { lastmod: { $gte: Timestamp 1000|0 } }, { shard: "shard0000", lastmod: { $gt: Timestamp 1000|0 } } ] }, orderby: { lastmod: 1 } }
       m30999| Thu Jul 11 08:34:18.974 [conn1] loaded 2 chunks into new chunk manager for inserts_consistent.coll with version 1|2||51dea64a9f9da64575d9e961
       m30999| Thu Jul 11 08:34:18.974 [conn1] ChunkManager: time to load chunks for inserts_consistent.coll: 0ms sequenceNumber: 3 version: 1|2||51dea64a9f9da64575d9e961 based on: 1|0||51dea64a9f9da64575d9e961
      Thu Jul 11 08:34:19.189 TypeError: Cannot call method 'getDB' of null at /mnt/slaves/Linux_32bit_Nightly/mongo/jstests/sharding/inserts_consistent.js:21
      failed to load: /mnt/slaves/Linux_32bit_Nightly/mongo/jstests/sharding/inserts_consistent.js
      

      Greg, please triage

            Assignee:
            Andy Schwerin (Inactive)
            Reporter:
            Matt Kangas (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: