SERVER-10172 Appenders must be added to global log domain during single threaded operation.

Due to an error during the logging refactoring, the RamLog("global") appender was being attached to the global log domain
during the startup of the web server thread, rather than during mongo-initializer execution.  MongoS and MongoD should both have been susceptible.